Raid-Calender/landing-styles.css
.hidden{
  display: none;
}

html,
body,
.landing-page,
#login-screen,
#main-screen,
#main-content{
  height: 100%;
}

body{
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #6c6f73;
}

.landing-page h2{
  font-family: 'Permanent Marker', cursive;
}

.navbar-brand{
  font-family: 'Permanent Marker', cursive;
}

.landing-page h1,h2,h3,h4,h5{
  color: #333;
}

.landing-page h6{
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.8rem;
  letter-spacing: 0.1rem;
}

#main-screen h6{
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.8rem;
  letter-spacing: 0.1rem;
}

.landing-page .blockquote{
  font-size: 1.6rem;
  color: #333;
  border: none;
  padding: 0;
}

.landing-page .blockquote-footer{
  margin: 1rem 0 0;
}

.landing-page #stage{
  background: url('./images/bg.png') center center no-repeat;
  background-size: cover;
  color: white;
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
}

#main-content, #main-screen{
  background: #262f36;
}

.landing-page #stage-caption{
  font-size: 1.4rem;
  font-weight: 200;
  max-width: 60rem;
  margin: 0 auto;
  text-align: center;
}

.landing-page #stage-caption h1{
  color: white;
  font-weight: bold;
  text-transform: uppercase;
  font-family: 'Permanent Marker', cursive;
}

.landing-page .feature-content{
  padding: 8rem 0;
  overflow: hidden;
}

.landing-page img{
  text-align: center;
  padding: 1em;
}

.landing-page .feature-dark{
  background: #262f36;
  color: white;
}

.landing-page .feature-dark h2{
  color: white;
}

.landing-page @media screen and (min-width : 991px){
  .feature-content .row{
    display: flex;
    align-items: center;
  }
}

.landing-page #main-footer{
  background: #262f36;
  color: white;
  padding: 6rem 0;
  font-size: 0.8rem;
}

.landing-page #main-footer h6{
  color: #718fA9;
}

.landing-page #main-footer a{
  color: #6C5D73;
}

.landing-page p{
  font-family: 'Roboto Slab', serif;
}

#my-signin2 > div{
  margin: 0 auto;
}

